# VERDICT-MCP

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  auth_handler.py  db_handler.py  docker-compose.yml  main_window.py  plan.md  pyproject.toml  requirements.txt  verdict.example.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: verdict.yml
.vscode-extension/: extension.js  package.json
resources/: .eslintrc.js
tests/: test_auth_handler.py  test_integration.py
verdict_mcp/: api_server.py  cli.py  server.py
verdict_mcp/core/: git_snapshot.py  multilang_audit.py  sandbox.py  state_machine.py
verdict_mcp/resources/: coverage_report.py  master_plan.py  ui_style_guide.py
verdict_mcp/tools/: audit_task.py  enforce_ui.py  initialize_plan.py  run_tests.py
